--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,8 +4,9 @@ eclipse.project.name = appName + '-core'
 dependencies {
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
   implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-
-  if(enableGraalNative == 'true') {
+  implementation 'org.mongodb:mongodb-driver-sync:4.11.0'
+  implementation 'org.slf4j:slf4j-simple:2.0.13'
+  if (enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
 }
