--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,6 +6,7 @@ dependencies {
   implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
   implementation 'org.mongodb:mongodb-driver-sync:4.11.0'
   implementation 'org.slf4j:slf4j-simple:2.0.13'
+  implementation 'com.google.code.gson:gson:2.10.1'
   if (enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
